# PrintSphere

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/esp32_s3_touch_amoled_1_75/: esp32_s3_touch_amoled_1_75.c  idf_component.yml
components/esp32_s3_touch_amoled_1_75/include/bsp/: esp32_s3_touch_amoled_1_75.h
components/esp32_s3_touch_lcd_2_8c/: CMakeLists.txt  esp32_s3_touch_lcd_2_8c.c  esp_lcd_touch_gt911.c  idf_component.yml
components/esp32_s3_touch_lcd_2_8c/include/bsp/: display.h  esp32_s3_touch_lcd_2_8c.h
flash/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/include/font/: mdi_40.c
main/include/img/: status_showcase.c
main/include/printsphere/: application.hpp  audio_notifier.hpp  bambu_cloud_client.hpp  board_config.hpp  config_store.hpp  mqtt_telemetry.hpp  printer_client.hpp  printer_state.hpp  setup_portal.hpp  ui.hpp
main/src/: application.cpp  audio_notifier.cpp  bambu_cloud_client.cpp  config_store.cpp  p1s_camera_client.cpp  pmu.cpp  printer_client.cpp  printer_state.cpp  setup_portal.cpp  status_resolver.cpp  ui.cpp
release/: RELEASE_NOTES_v1.6.md
release/2.8c/: README.md
tools/: package_initial_flash.py
tools/patches/: apply_adapter_patches.ps1
